llvm-toolchain-13 (1:13.0.1~+rc1-1~exp5) UNRELEASED; urgency=medium

  * Explicitly link against -latomic on all ports, not only the Linux ones.

 -- Samuel Thibault <sthibault@debian.org>  Mon, 10 Jan 2022 21:36:34 +0100

llvm-toolchain-13 (1:13.0.1~+rc1-1~exp4) experimental; urgency=medium

  * Fix the cmake file with the mlir introducing

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 06 Jan 2022 14:30:59 +0100

llvm-toolchain-13 (1:13.0.1~+rc1-1~exp3) experimental; urgency=medium

  * Build and ship MLIR as 3 new packages (libmlir-13-dev, libmlir-13
    and mlir-13-tools)
  * Install bfd plugins in
    /usr/lib/bfd-plugins/LLVMgold-@LLVM_VERSION@.so

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 31 Dec 2021 12:22:38 +0100

llvm-toolchain-13 (1:13.0.1~+rc1-1~exp2) experimental; urgency=medium

  * Bring back the dependency clang => llvm-13-linker-tools
  * Unbreak llvm-toolchain-13 on buster.
    -fuse-ld=gold wasn't passed to compiler-rt. it was using bfd.
    And binutils shipping in buster has a bug preventing this to work:
    https://github.com/llvm/llvm-project/issues/42339
  * Remove AVR from LLVM_EXPERIMENTAL_TARGETS_TO_BUILD. stable since 11
    https://releases.llvm.org/11.0.0/docs/ReleaseNotes.html#changes-to-the-avr-target
  * Use the version suffix when calling wasm-ld => wasm-ld-13
    https://bugzilla.mozilla.org/show_bug.cgi?id=1747145
  * Fix run-clang-tidy symlink. it moved from /usr/lib/llvm-13/share/clang/run-clang-tidy
    to /usr/lib/llvm-13/bin/run-clang-tidy
    (Closes: #1001748)
  * Install LLVMgold in usr/lib/bfd-plugins to help various tools to understand the
    format (Closes: #919020)

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 16 Dec 2021 14:28:09 +0100

llvm-toolchain-13 (1:13.0.1~+rc1-1~exp1) experimental; urgency=medium

  * New testing release
  * Use parallel + -4 for the xz tarballs compression to make it faster
  * Add manpages for git-clang-format & run-clang-tidy