@@ -1,6 +1,11 @@
 llvm-toolchain-13 (1:13.0.1~+rc1-1~exp5) UNRELEASED; urgency=medium
 
+  [ Samuel Thibault ]
   * Explicitly link against -latomic on all ports, not only the Linux ones.
+
+  [ Pino Toscano ]
+  * Stop hardcoding -DCMAKE_SYSTEM_NAME=Linux as cmake parameter, as it breaks
+    stage2 builds on non-Linux architectures
 
  -- Samuel Thibault <sthibault@debian.org>  Mon, 10 Jan 2022 21:36:34 +0100
 
